--- a/itsm/ldtk/templates/ldtk/home.html
+++ b/itsm/ldtk/templates/ldtk/home.html
@@ -35,10 +35,10 @@
           <form class="navbar-form navbar-right" method="POST">
             {% csrf_token %}
 			<div class="form-group">
-              <input type="text" placeholder="Phone" class="form-control">
+              <input type="text" placeholder="Phone" name ="username" class="form-control">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input type="password" name="userpwd" placeholder="Password" class="form-control">
             </div>
             <button  type="submit" class="btn btn-success">登陆</button>
 			<a  type="button" class="btn btn-info" href="register.html" > 注册</a>
