--- a/itsm/ldtk/templates/ldtk/zsk.html
+++ b/itsm/ldtk/templates/ldtk/zsk.html
@@ -38,31 +38,20 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
+		<a class="navbar-brand" href="#">知识库</a>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar1" >
+            <span class="sr-only ">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">知识库</a>
+          
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar1" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">首页</a></li>
             <li><a href="#about">关于</a></li>
             <li><a href="#contact">联系我们</a></li>
-<!--             <li class="dropdown"> 下拉按钮
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -73,14 +62,15 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>YUN知识库</h1>
-        <p>目前知识库共有知识条目合计{{b}}条</p>
+        <p>目前知识库共有知识条目合计{{all.count}}条</p>
       </div>
 
-
+	<form class="search-form" method="post">
+	{% csrf_token %}
       <div class="form-group">
         <input type="text" class="form-control" name="text_search" placeholder="请输入查找内容" ></input>
-		<button type="button" class="btn btn-lg btn-primary">快速查找知识库</button>
-		
+		<button type="submit"  class="btn btn-lg btn-primary">快速查找知识库</button>
+	</form>	
 			
 		
 		
@@ -88,28 +78,40 @@
 
 
       <blockquote >
-        <h1>知识库最近5条目</h1>
+        <h1>最近{{form.count}}条目</h1>
       </blockquote>
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-striped table-hover">
+          <table class="table table-striped table-hover table-responsive">
             <thead>
               <tr>
-                <th>设备类型</th>
+                <th>设备</th>
+                <th class="hidden-xs">提交时间</th>
                 <th>故障现象</th>
-                <th>处理方法</th>
                 <th>工具及其他</th>
+				<th class="hidden-xs">建议人数</th>
+				<th class="hidden-xs">贡献者</th>
+				
 				
               </tr>
             </thead>
             <tbody>
 			{% for aa in form %}
-              <tr>
-                <td>{{aa.zsk_name}}</td>
-                <td>{{aa.zsk_name}}</td>
-                <td>{{aa.zsk_name}}</td>
-                <td>{{aa.zsk_name}}</td>
-              </tr>
+              <tr  >
+				<a >
+					<div>
+					
+					<td>{{aa.shebei.name}}</td>
+					<td class="hidden-xs">{{aa.shijian}}</td>
+					<td><a href="#">{{aa.zsk_name}}</a></td>
+					<td>{%for bb in aa.gongju.all%}{{bb.name}} {%endfor%}</td>
+					<td class="hidden-xs">{{aa.jianyirenshu}}</td>
+					<td class="hidden-xs">{{aa.gongxianzhe}}</td>
+					
+					
+					</div>
+				</a>
+				</tr>
 			{%endfor%}
             </tbody>
           </table>
@@ -122,32 +124,43 @@
       
 	 
       <blockquote >
-        <h1>知识库分类条目</h1>
+        <h1>分类条目</h1>
       </blockquote>
-     
+		{% for aa in shebeileixin %}
         <div class="col-sm-12 col-md-6 ">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h3 class="panel-title">{{item_group1}}</h3>
+              <h3 class="panel-title">{{aa.name}}</h3>
             </div>
             <div class="panel-body">
            			<table class="table table-striped table-hover">
 						<thead>
+						
 							<tr>
-							<th>设备类型</th>
+							<th>设备</th>
 							<th>故障现象</th>
 							<th>工具</th>
 							<th>建议人数</th>
-							
+
 						  </tr>
 						</thead>
 						<tbody>
-						  <tr>
-							<td>{{p1_t1_1}</td>
-							<td>{{p1_t1_2}</td>
-							<td>{{p1_t1_3}</td>
-							<td>{{p1_t1_4}</td>
-						  </tr>
+						{%for bb in form%}
+							
+
+							{% if bb.shebei.sb_lx == aa %}
+							  
+							  <tr >
+								
+								<td>{{bb.shebei.name}}</td>
+								<td><a	href="#">{{bb.zsk_name}}</a></td>
+								<td>{%for cc in bb.gongju.all%}{{cc.name}} {%endfor%}</td>
+								<td>{{bb.jianyirenshu}}</td>
+						
+							  </tr>
+							{%endif%}
+							
+						{% endfor%}							  
 
 						</tbody>
 					</table>
@@ -156,33 +169,8 @@
           </div>
 
         </div><!-- /.col-sm-4 -->
-	
+		{%endfor%}
 
-		<div class="col-sm-12 col-md-6">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h3 class="panel-title">其他...</h3>
-            </div>
-            <div class="panel-body">
-           			<table class="table table-striped table-hover">
-						<thead>
-							<tr>
-							<th>设备类型</th>
-							<th>故障现象</th>
-							<th>工具</th>
-							<th>建议人数</th>
-							
-						  </tr>
-						</thead>
-						<tbody>
-
-						</tbody>
-					</table>
-            </div>
-			</div>
-         
-        </div><!-- /.col-sm-4 -->
-      
 
 		 <div class="col-sm-12">
 			  <div class="page-header">
