--- a/itsm/ldtk/templates/ldtk/register.html
+++ b/itsm/ldtk/templates/ldtk/register.html
@@ -75,25 +75,25 @@
 			<tr>
                 <th>请输入你的密码</th>
                 <th>
-					<input type="password"  name="username" class="form-control" placeholder="请输入你的密码" required>
+					<input type="password"  name="userpwd1" class="form-control" placeholder="请输入你的密码" required>
 				</th>
 			</tr>
 			<tr>
                 <th>请输入用户名</th>
                 <th>
-					<input type="password"  name="username" class="form-control" placeholder="请输入你的密码" required>
+					<input type="password"  name="userpwd2" class="form-control" placeholder="请输入你的密码" required>
 				</th>
 			</tr>
 			<tr>
                 <th >姓</th>
                 <th>
-					<input type="text"  name="username" class="form-control" placeholder="Firstname" required>
+					<input type="text"  name="firstname" class="form-control" placeholder="Firstname" required>
 				</th>
 			</tr>
 			<tr>
 				<th>名</th>
                 <th>
-					<input type="text"  name="username" class="form-control" placeholder="Lastname" required>
+					<input type="text"  name="lastname" class="form-control" placeholder="Lastname" required>
 				</th>
 			</tr>
 			<tr>
@@ -108,7 +108,7 @@
 				</th>
 			</tr>
 			<tr>
-				<th class=" btn btn-info btn-lg">注  册</th>
+				
 			</tr>
 			
 
@@ -117,7 +117,7 @@
         </div>
       </div>
  
-	  
+		<button class=" btn btn-info btn-lg" type="submit">注  册</button>
 	  </form>
 	</div>
 </div>
