--- a/itsm/ldtk/templates/ldtk/zskxx.html
+++ b/itsm/ldtk/templates/ldtk/zskxx.html
@@ -78,98 +78,37 @@
 
 
       <blockquote >
-        <h1>最近{{form.count}}条目</h1>
+        <h2> 故障处理详细信息</h2>
       </blockquote>
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-striped table-hover table-responsive">
-            <thead>
-              <tr>
-                <th>设备</th>
-                <th class="hidden-xs">提交时间</th>
-                <th>故障现象</th>
-                <th>工具及其他</th>
-				<th class="hidden-xs">建议人数</th>
-				<th class="hidden-xs">贡献者</th>
-				
-				
-              </tr>
-            </thead>
-            <tbody>
+          
+
+
 			{% for aa in form %}
-              <tr  >
-				<a >
-					<div>
+           
+				
+				
+					<h2 >故障现象：{{aa.zsk_name}}</h2>
+					<h2 >设备名称： {{aa.shebei.name}}</h2>
+					<h2>处理方法：{{aa.zsk_chulifangfan}}</h2>
+					<h2 >知识库提交时间：{{aa.shijian}}</h2>
+					<h2>工具：{%for bb in aa.gongju.all%}{{bb.name}} {%endfor%}</h2>
+					<h2>建议人数：{{aa.jianyirenshu}}人</h2>
+					<h2>知识贡献者：{{aa.gongxianzhe}}</h2>
 					
-					<td>{{aa.shebei.name}}</td>
-					<td class="hidden-xs">{{aa.shijian}}</td>
-					<td><a href="/zsk/{{aa.id}}">{{aa.zsk_name}}</a></td>
-					<td>{%for bb in aa.gongju.all%}{{bb.name}} {%endfor%}</td>
-					<td class="hidden-xs">{{aa.jianyirenshu}}</td>
-					<td class="hidden-xs">{{aa.gongxianzhe}}</td>
 					
-					
-					</div>
-				</a>
-				</tr>
+				
+
 			{%endfor%}
-            </tbody>
-          </table>
-        </div>
+
+           </div>
       </div>
 
 
 
 
       
-	 
-      <blockquote >
-        <h1>分类条目</h1>
-      </blockquote>
-		{% for aa in shebeileixin %}
-        <div class="col-sm-12 col-md-6 ">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h3 class="panel-title">{{aa.name}}</h3>
-            </div>
-            <div class="panel-body">
-           			<table class="table table-striped table-hover">
-						<thead>
-						
-							<tr>
-							<th>设备</th>
-							<th>故障现象</th>
-							<th>工具</th>
-							<th>建议人数</th>
-
-						  </tr>
-						</thead>
-						<tbody>
-						{%for bb in form%}
-							
-
-							{% if bb.shebei.sb_lx == aa %}
-							  
-							  <tr >
-								
-								<td>{{bb.shebei.name}}</td>
-								<td><a	href="/zsk/{{bb.id}}">{{bb.zsk_name}}</a></td>
-								<td>{%for cc in bb.gongju.all%}{{cc.name}} {%endfor%}</td>
-								<td>{{bb.jianyirenshu}}</td>
-						
-							  </tr>
-							{%endif%}
-							
-						{% endfor%}							  
-
-						</tbody>
-					</table>
-			 
-            </div>
-          </div>
-
-        </div><!-- /.col-sm-4 -->
-		{%endfor%}
 
 
 		 <div class="col-sm-12">
