--- a/itsm/ldtk/templates/ldtk/zskxx.html
+++ b/itsm/ldtk/templates/ldtk/zskxx.html
@@ -35,27 +35,7 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-		<a class="navbar-brand" href="#">知识库</a>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar1" >
-            <span class="sr-only ">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          
-        </div>
-        <div id="navbar1" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">首页</a></li>
-            <li><a href="#about">关于</a></li>
-            <li><a href="#contact">联系我们</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+	{% include "ldtk/top.html"%}
 
     <div class="container theme-showcase" role="main">
 
