--- a/itsm/ldtk/templates/ldtk/register.html
+++ b/itsm/ldtk/templates/ldtk/register.html
@@ -87,7 +87,7 @@
                 <tr >
 				<div id="und1" class="form-group has-success has-feedback" >
 					<input type="text" id="un1" name="username" class="form-control" onblur="checkusername()" placeholder="账号" required>
-						<span id="uns1"	class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="false" ></span>
+						<span id="uns1"	class="glyphicon glyphicon-ok form-control-feedback"   disabled=ture></span>
 					</div>
 				</tr>
 				
