--- a/itsm/ldtk/templates/ldtk/home.html
+++ b/itsm/ldtk/templates/ldtk/home.html
@@ -7,10 +7,18 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>四川理德泰克科技有限公司</title>
+    <title>知识库</title>
 
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+    <!-- Custom styles for this template -->
+    <link href="theme.css" rel="stylesheet">
+	<script type="text/javascript">
+
+	</script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -20,109 +28,201 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" >四川理德泰克科技有限公司</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-		{%if user.is_authenticated %}
-		   <div class="navbar-form navbar-right" >
-            {% csrf_token %}
-            <div class="form-group">
-            <p class="btn btn-info"> 欢迎 {%firstof user.get_short_name user.get_username%}</p>
-            </div>			
-			
-			<a  type="button" class="btn btn-danger" href="/register" > 注销</a>
-			
-		  </div>
-		{% else %}
-          <form class="navbar-form navbar-right" method="POST">
-            {% csrf_token %}
-			<div class="form-group">
-              <input type="text" name ="username" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <input type="password" name="userpwd"  class="form-control" required>
-            </div>
-            <button  type="submit" class="btn btn-success">登陆</button>
-			<a  type="button" class="btn btn-info" href="/register" > 注册</a>
-			
-		  </form>
-		{%endif%}
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h2>四川理德泰克科技有限公司</h2>
-        <h2>欢迎您</h2>
-        <p><a class="btn btn-primary btn-lg" href="/zsk" role="button">知识库 &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-6">
-          <h2>项目案例</h2>
-          <p>
-		  
-		  </p>
-          <p><a class="btn btn-default" href="/xmgl" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-6">
-          <h2>运维服务</h2>
-          <p>
-
-		  </p>
-          <p><a class="btn btn-default" href="/ywfw" role="button">View details &raquo;</a></p>
-       </div>
-      </div>
-	  <div class="row">
-        <div class="col-md-6">
-          <h2>企业文化</h2>
-          <p>
 	
-		  </p>
-          <p><a class="btn btn-default" href="/about" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-6">
-          <h2>联系我们</h2>
-          <p>
+	<div class=" container-fluid">
+		<div class="columu">
+			<div class="panel-group col-md-3 col-lg-2" id="accordion">
+				<div class="panel panel-default" >
+					<div class=" panel-heading">
+						<h4 class="panel-title">
+							<a  href="#collapseOne" data-toggle="collapse" data-parent="#accordion">123123</a>
+						</h4>
+						
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse in"> 
+						<div class="panel-body"> 这里是第一部分。 
+						</div>			
+					</div>
+					
+				
+				
+				</div>
+				<div class="panel panel-default" id="accordion">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">点击我进行展示，再点击我进行折叠，第二部分
+							</a> 
+						</h4> 
+					</div>
+					<div id="collapseTwo" class="panel-collapse collapse"> 
+						<div class="panel-body"> 这里是第二部分。 
+						</div>
+					</div>
+				</div>
+				<div class="btn-group" data-toggle="buttons">
+					<label for="" class="btn btn-primary">
+						<input type="radio" name="fa"  autocomplete="off" > asdasd 
+						
+						</input>
+					
+					</label>
+				</div>
+				<div class="btn-group" >						
+						<label for="" class="btn btn-primary">
+							<input type="radio" name="fa" autocomplete="off"> asdasd 
+							
+							</input>
+						
+				
+						</label>
+				</div>
+				<div class="btn-group" data-toggle="buttons">	
+						<label for="" class="btn btn-primary active">
+							<input type="radio" name="fa" complete="off"> asdasd 
+							
+							</input>
+						
+						</label>
+				</div>
 
-		  </p>
-          <p><a class="btn btn-default" href="/contactus" role="button">View details &raquo;</a></p>
-       </div>
+			
+			</div>
+			<div class=" container-fluid col-md-9 col-lg-10">
+			<div class="container theme-showcase" role="main">
+
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="container-fluid jumbotron">
+        <h1>YUN知识库</h1>
+        <p>目前知识库共有知识条目合计{{all.count}}条</p>
       </div>
-	  
-	  
 
-      <hr>
+	<form class="search-form" method="post">
+	{% csrf_token %}
+      <div class="form-group">
+        <input type="text" class="form-control" name="text_search" placeholder="请输入查找内容" ></input>
+		<button type="submit"  class="btn btn-lg btn-primary">快速查找知识库</button>
+	</form>	
+			
+		
+		
+      </div>
 
-      <footer>
-        <p>&copy; 2016 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
+
+      <blockquote >
+        <h1>最近{{form.count}}条目</h1>
+      </blockquote>
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table table-striped table-hover table-responsive">
+            <thead>
+              <tr>
+                <th>设备</th>
+                <th class="hidden-xs">提交时间</th>
+                <th>故障现象</th>
+                <th>工具及其他</th>
+				<th class="hidden-xs">建议人数</th>
+				<th class="hidden-xs">贡献者</th>
+				
+				
+              </tr>
+            </thead>
+            <tbody>
+			{% for aa in form %}
+              <tr  >
+				<a >
+					<div>
+					
+					<td>{{aa.shebei.name}}</td>
+					<td class="hidden-xs">{{aa.shijian}}</td>
+					<td><a href="/zsk/{{aa.id}}">{{aa.zsk_name}}</a></td>
+					<td>{%for bb in aa.gongju.all%}{{bb.name}} {%endfor%}</td>
+					<td class="hidden-xs">{{aa.jianyirenshu}}</td>
+					<td class="hidden-xs">{{aa.gongxianzhe}}</td>
+					
+					
+					</div>
+				</a>
+				</tr>
+			{%endfor%}
+            </tbody>
+          </table>
+        </div>
+      </div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      
+	 
+      <blockquote >
+        <h1>分类条目</h1>
+      </blockquote>
+			{% for aa in shebeileixin %}
+        <div class="col-sm-12 col-md-6 ">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">{{aa.name}}</h3>
+            </div>
+            <div class="panel-body">
+           			<table class="table table-striped table-hover">
+						<thead>
+						
+							<tr>
+							<th>设备</th>
+							<th>故障现象</th>
+							<th>工具</th>
+							<th>建议人数</th>
+
+						  </tr>
+						</thead>
+						<tbody>
+						{%for bb in form%}
+							
+
+							{% if bb.shebei.sb_lx == aa %}
+							  
+							  <tr >
+								
+								<td>{{bb.shebei.name}}</td>
+								<td><a	href="/zsk/{{bb.id}}">{{bb.zsk_name}}</a></td>
+								<td>{%for cc in bb.gongju.all%}{{cc.name}} {%endfor%}</td>
+								<td>{{bb.jianyirenshu}}</td>
+						
+							  </tr>
+							{%endif%}
+							
+						{% endfor%}							  
+
+						</tbody>
+					</table>
+			 
+            </div>
+          </div>
+
+        </div><!-- /.col-sm-4 -->
+		{%endfor%}
+
+
+		 <div class="col-sm-12">
+			  <div class="page-header">
+				<h1>Thank You</h1>
+			  </div>
+		</div>
+
+    </div>
+			
+			</div>
+			
+		
+	
+		</div>
+	
+	
+
+	</div>
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   </body>
 </html>
