--- a/itsm/ldtk/templates/ldtk/home.html
+++ b/itsm/ldtk/templates/ldtk/home.html
@@ -27,201 +27,13 @@
   </head>
 
   <body>
-
-
-	
-	<div class=" container-fluid">
-		<div class="columu">
-			<div class="panel-group col-md-3 col-lg-2" id="accordion">
-				<div class="panel panel-default" >
-					<div class=" panel-heading">
-						<h4 class="panel-title">
-							<a  href="#collapseOne" data-toggle="collapse" data-parent="#accordion">123123</a>
-						</h4>
-						
-					</div>
-					<div id="collapseOne" class="panel-collapse collapse in"> 
-						<div class="panel-body"> 这里是第一部分。 
-						</div>			
-					</div>
-					
-				
-				
-				</div>
-				<div class="panel panel-default" id="accordion">
-					<div class="panel-heading">
-						<h4 class="panel-title">
-							<a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">点击我进行展示，再点击我进行折叠，第二部分
-							</a> 
-						</h4> 
-					</div>
-					<div id="collapseTwo" class="panel-collapse collapse"> 
-						<div class="panel-body"> 这里是第二部分。 
-						</div>
-					</div>
-				</div>
-				<div class="btn-group" data-toggle="buttons">
-					<label for="" class="btn btn-primary">
-						<input type="radio" name="fa"  autocomplete="off" > asdasd 
-						
-						</input>
-					
-					</label>
-				</div>
-				<div class="btn-group" >						
-						<label for="" class="btn btn-primary">
-							<input type="radio" name="fa" autocomplete="off"> asdasd 
-							
-							</input>
-						
-				
-						</label>
-				</div>
-				<div class="btn-group" data-toggle="buttons">	
-						<label for="" class="btn btn-primary active">
-							<input type="radio" name="fa" complete="off"> asdasd 
-							
-							</input>
-						
-						</label>
-				</div>
-
-			
-			</div>
-			<div class=" container-fluid col-md-9 col-lg-10">
-			<div class="container theme-showcase" role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="container-fluid jumbotron">
-        <h1>YUN知识库</h1>
-        <p>目前知识库共有知识条目合计{{all.count}}条</p>
-      </div>
-
-	<form class="search-form" method="post">
-	{% csrf_token %}
-      <div class="form-group">
-        <input type="text" class="form-control" name="text_search" placeholder="请输入查找内容" ></input>
-		<button type="submit"  class="btn btn-lg btn-primary">快速查找知识库</button>
-	</form>	
-			
-		
-		
-      </div>
-
-
-      <blockquote >
+        <blockquote >
         <h1>最近{{form.count}}条目</h1>
-      </blockquote>
-      <div class="row">
-        <div class="col-md-12">
-          <table class="table table-striped table-hover table-responsive">
-            <thead>
-              <tr>
-                <th>设备</th>
-                <th class="hidden-xs">提交时间</th>
-                <th>故障现象</th>
-                <th>工具及其他</th>
-				<th class="hidden-xs">建议人数</th>
-				<th class="hidden-xs">贡献者</th>
-				
-				
-              </tr>
-            </thead>
-            <tbody>
-			{% for aa in form %}
-              <tr  >
-				<a >
-					<div>
-					
-					<td>{{aa.shebei.name}}</td>
-					<td class="hidden-xs">{{aa.shijian}}</td>
-					<td><a href="/zsk/{{aa.id}}">{{aa.zsk_name}}</a></td>
-					<td>{%for bb in aa.gongju.all%}{{bb.name}} {%endfor%}</td>
-					<td class="hidden-xs">{{aa.jianyirenshu}}</td>
-					<td class="hidden-xs">{{aa.gongxianzhe}}</td>
-					
-					
-					</div>
-				</a>
-				</tr>
-			{%endfor%}
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-
-
-
-      
-	 
-      <blockquote >
-        <h1>分类条目</h1>
-      </blockquote>
-			{% for aa in shebeileixin %}
-        <div class="col-sm-12 col-md-6 ">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h3 class="panel-title">{{aa.name}}</h3>
-            </div>
-            <div class="panel-body">
-           			<table class="table table-striped table-hover">
-						<thead>
-						
-							<tr>
-							<th>设备</th>
-							<th>故障现象</th>
-							<th>工具</th>
-							<th>建议人数</th>
-
-						  </tr>
-						</thead>
-						<tbody>
-						{%for bb in form%}
-							
-
-							{% if bb.shebei.sb_lx == aa %}
-							  
-							  <tr >
-								
-								<td>{{bb.shebei.name}}</td>
-								<td><a	href="/zsk/{{bb.id}}">{{bb.zsk_name}}</a></td>
-								<td>{%for cc in bb.gongju.all%}{{cc.name}} {%endfor%}</td>
-								<td>{{bb.jianyirenshu}}</td>
-						
-							  </tr>
-							{%endif%}
-							
-						{% endfor%}							  
-
-						</tbody>
-					</table>
-			 
-            </div>
-          </div>
-
-        </div><!-- /.col-sm-4 -->
-		{%endfor%}
-
-
-		 <div class="col-sm-12">
-			  <div class="page-header">
-				<h1>Thank You</h1>
-			  </div>
-		</div>
-
-    </div>
-			
-			</div>
-			
-		
-	
-		</div>
-	
-	
-
-	</div>
-   
+		</blockquote>
+		<table class="table table-striped table-hover table-responsive">
+		{{form.as_ul}}
+		</table>
+	   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
   </body>
